# nw-sys-example

./: .gitignore  Cargo.toml  README.md  build  nw.toml  package.json
root/: home.html  index.html  index.js  package.json  page1.html  page2.html
src/: lib.rs
wasm/: Cargo.toml  build-web  build-web-dev
wasm/src/: lib.rs
