[package]
name = "nw-sys-example"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
wasm-bindgen = "0.2.79"
js-sys = "0.3.56"
nw-sys={path="../nw-sys"}
workflow-log="*"
workflow-wasm = {path="../workflow-wasm"}
workflow-dom = {path="../workflow-dom"}
workflow-nw = {path="../workflow-nw"}

[dependencies.web-sys]
version = "0.3.60"
features = [
    'console',
    'Document',
    'Window',
    'HtmlElement',
    'CustomEvent',
    'MouseEvent',
    'HtmlVideoElement',
    'MediaStream'
]

