[package]
name = "nwjs-sys-wasm"
version = "0.1.0"
description = "NWJS Sys WASM Bindings"
license = "AGPL-3+"
edition = "2018"

[features]
test = []

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
nwjs-sys-example = { path = "../" }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.29"
